<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/layDrawer"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <include layout="@layout/lay_entries"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/layNavigationHeaderFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_navigation_header"/>

        <android.support.design.widget.NavigationView
            android:id="@+id/vwNavigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:menu="@menu/menu_entries_navigation">


        </android.support.design.widget.NavigationView>

    </LinearLayout>


</android.support.v4.widget.DrawerLayout>