<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_search"
        android:title="@string/text_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        />
</menu>