...

        </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/margin_page"
        android:src="@drawable/ic_action_add"
...
